Fixed horizontal scroll bar bug with 100vw.

--- a/styles/global.css
+++ b/styles/global.css
@@ -65,7 +65,7 @@ body {
 /* Navbar */
 nav ul {
 	/* TODO Add webkits */
-	padding: 20px 16px;
+	padding: 20px 2vw;
 	display: flex;
 	flex-flow: row wrap;
 	align-items: center;
