--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,7 @@
 .hero {
     width: 100vw;
     height: 100vh;
+    max-width: 100%;
 
     display: flex;
     justify-content: center;
